--- a/PracticaFinal/AplicacionAcessoDatos/resources/db.properties
+++ b/PracticaFinal/AplicacionAcessoDatos/resources/db.properties
@@ -1,5 +1,5 @@
 #Modificar los valores de los parámetros para indicar 
 #las credenciales y URL de acceso a la base de datos Sakila de MySQL
 user=root
-pass=
+pass=root
 url=jdbc:mysql://localhost:3306/jardineria
